Fixed overflow in mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,7 @@
 
 html,
 body {
+    overflow-x: clip;
     height: 100dvh;
+    background-color: #00060e;
 }
